Dates feature for creation and more integration tests for it
